[package]
name = "url_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.117"                                 # Add this line
csv = "1.3.0"                                          # Add this line for CSV writing
