[package]
name = "url_tester"
version = "0.1.0"
edition = "2021"
license = 'MIT OR Apache-2.0'
description = "A CLI tool to test URLs with configurable options"
readme = "README.md"
homepage = "https://github.com/yongenaelf/url-tester"
repository = "https://github.com/yongenaelf/url-tester"
keywords = ["cli", "url", "tester", "http", "https"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.117" # Add this line
csv = "1.3.0" # Add this line for CSV writing

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
